# onee_meta

./: .gitignore  README.md  app.py  note.md  pyproject.toml  test.py
.github/workflows/: auto_build_pre_release.yml  auto_build_release.yml  build_pre_release.yml  build_release.yml  test.yml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/skills/: batch-process.md  cbz-archive.md  comicinfo-xml.md  pyside-widget.md
assets/: app_setting.json  style.qss
assets/tag_list/: test1.json  test2.json
assets/translations/: en_US.qm
assets/translations/dev/: generate_lupdate_stub_help.py  lupdate_stub_help.py
assets/translations/ts/: en_US.ts  zh_TW.ts
dev/translations/ts/: zh_TW.ts
src/: __init__.py  app_config.py  layout_constants.py  logging_config.py  signal_bus.py  translations.py
src/classes/: __init__.py  calibre_scanner.py
src/classes/controller/: __init__.py  comic_placeholder_data.py
src/classes/data/: comic_info_data.py  (+1 more)
src/common/: __init__.py  unity_function.py
src/controller/: __init__.py  async_worker.py  batch_processor.py  main_controller.py
src/model/: __init__.py  main_model.py  settings_manager.py
src/translations/: __init__.py  _aggregator.py  app_info_tab.py  app_setting_tab.py  comic_list_view.py  info_editor_tab.py  main_controller.py  main_view.py  operation_area.py  ui_widgets.py
src/view/: __init__.py  comic_list_view.py  main_view.py  operation_area.py
src_old/: app_config.py  signal_bus.py  translations.py
src_old/controller/: main_controller.py
src_old/model/: main_model.py
(+45 files in other folders)
